--- a/src/views/About/About.module.css
+++ b/src/views/About/About.module.css
@@ -4,8 +4,10 @@
 }
 .shuffle {
   width: 100%;
-  height: 600px;
-  transform: translateY(-3rem);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .mobile {
   display: none;
