--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -27,11 +27,11 @@
   height: 100%;
 }
 .page_view {
+  display: flex;
+  justify-content: center;
   margin-top: 10rem;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -40,11 +40,9 @@
     width: 100%;
     height: 100%;
   }
-  .output {
-    width: 100%;
-    height: 100%;
-  }
   .page_view {
     margin-top: 4rem;
+    width: 100%;
+    height: 100%;
   }
 }
